--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.34",
     "@types/web3": "^1.0.20",
+    "@web3auth/base": "^9.5.1",
+    "@web3auth/ethereum-provider": "^9.5.1",
+    "@web3auth/modal": "^9.5.1",
+    "buffer": "^6.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
@@ -43,5 +47,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "browser": {
+  "crypto": "crypto-browserify",
+  "stream": "stream-browserify"
   }
 }
