--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/styled-components": "^5.1.34",
     "@types/web3": "^1.0.20",
     "@web3auth/base": "^9.5.1",
+    "@web3auth/default-evm-adapter": "^9.5.2",
     "@web3auth/ethereum-provider": "^9.5.1",
     "@web3auth/modal": "^9.5.1",
     "buffer": "^6.0.3",
@@ -49,7 +50,7 @@
     ]
   },
   "browser": {
-  "crypto": "crypto-browserify",
-  "stream": "stream-browserify"
+    "crypto": "crypto-browserify",
+    "stream": "stream-browserify"
   }
 }
